<resources xmlns:tools="http://schemas.android.com/tools"
    tools:locale="pt_BR">
    <string name="app_name">Finance</string>

    <string name="facebook_app_id" translatable="false">410007356627372</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb410007356627372</string>
    <string name="onboarding_title_one">Gerencie seu Dinheiro</string>
    <string name="onboarding_subtitle_one">Você poderá ver seus pagamentos e administrar seu tempo e dinheiro com suas proprias mãos.</string>
    <string name="onboarding_title_two">Economize</string>
    <string name="onboarding_subtitle_two">Verifique seus maiores gastos facilmente e crie estratégias para diminuir seus custos com poucos passos.</string>
    <string name="onboarding_title_three">Crie metas</string>
    <string name="onboarding_subtitle_three">Defina objetivos e sonhos para realizar com suas economias.</string>
    <string name="auth_access_account">Acesse sua conta</string>
    <string name="auth_access_account_subtitle">para controlar suas finanças</string>
    <string name="auth_type_email">Digite seu email</string>
    <string name="auth_start_continue">Continuar</string>
    <string name="auth_alternative_text">ou</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="auth_enter_as_guest">Entrar como convidado</string>

    <string name="money_sign_value_format">$%1$.2f</string>
    <string name="money_format">%1$.2f</string>

    <string name="money_sign_string_format">$%1$s</string>
    <string name="money_string_format">%1$s</string>
    <string name="balance">Saldo</string>
    <string name="income">Entrada</string>
    <string name="payments">Pagamentos</string>
    <string name="add_transaction">Adicionar</string>
    <string name="transactions">Atividades</string>
    <string name="accounts">Contas</string>
    <string name="latest_transactions">Últimas transações</string>
    <string name="see_all_transactions">Ver todas</string>
    <string name="user_guest_account">Convidado</string>
    <string name="auth_type_password">Digite sua senha</string>

    <string name="auth_err_not_an_email">Digite um email válido</string>
    <string name="auth_err_small_password">Senha muito curta</string>
    <string name="auth_register">Criar sua conta</string>
    <string name="auth_register_lets_meet">Vamos nos conhecer</string>
    <string name="auth_register_control_finances">Falta pouco para você controlar suas finanças</string>
    <string name="auth_register_name">Qual o seu nome?</string>
    <string name="auth_register_email">E o seu email?</string>
    <string name="auth_register_basics_continue">Continuar</string>
    <string name="auth_password_create">Hora de se proteger</string>
    <string name="auth_password_pick">Escolha a senha para sua conta</string>
    <string name="auth_create_pick_password">Digite sua senha</string>
    <string name="auth_create_repeat_password">Repita a senha</string>
    <string name="auth_create_password_continue">Continuar</string>
    <string name="auth_pick_picture">Gostaria de escolher uma foto?</string>
    <string name="auth_pick_picture_subtitle">Não precisamos ser tímidos</string>
    <string name="auth_request_pick_picture_accessibility">Selecionar uma foto</string>
    <string name="auth_selected_picture_accessibility">Foto selecionada</string>
    <string name="auth_picture_not_now">Agora não</string>
    <string name="auth_pick_picture_continue">Continuar</string>
    <string name="auth_create_summary_title">Tudo certo</string>
    <string name="auth_create_all_info_present">Já temos todas as informações necessárias</string>
    <string name="auth_create_account_request">Criar conta</string>
    <string name="format_zero_money">0,00</string>
    <string name="create_transaction_value_label">Valor</string>
    <string name="create_transaction_title">Nova atividade</string>
    <string name="create_transaction_type_label">Vamos começar pelo tipo dessa atividade</string>
    <string name="create_transaction_type_select_hint">Tipo da atividade</string>
    <string name="brl_currency_code">R$</string>
    <string name="create_transaction_name_label">Nome</string>
    <string name="create_transaction_date_label">Data</string>
    <string name="create_transaction_today_date">Hoje</string>
    <string name="create_transaction_category_label">Categoria</string>
    <string name="create_transaction_account_label">Conta usada</string>
    <string name="transaction_create_pick_category_hint">Toque para selecionar</string>
    <string name="transaction_create_pick_account_hint">Toque para selecionar</string>
    <string name="create_transaction_add_details">Adicionar descrição detalhada</string>
    <string name="create_transaction_name_hint">Compras do dia</string>
</resources>