<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="actions"
            type="dev.forcetower.finances.view.auth.login.EmailActions" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@mipmap/login_background"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardElevation="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="24dp"
                    android:paddingBottom="8dp"
                    app:paddingStartSystemWindowInsets="@{true}"
                    app:paddingEndSystemWindowInsets="@{true}"
                    app:paddingBottomSystemWindowInsets="@{true}">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:text="@string/auth_access_account"
                        android:textColor="?attr/colorOnBackground"
                        android:textSize="20sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:text="@string/auth_access_account_subtitle"
                        android:textSize="15sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Finance.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginTop="16dp"
                        app:textHelperError="@{actions.emailError}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={actions.email}"
                            android:hint="@string/auth_type_email"
                            android:inputType="textEmailAddress"
                            android:enabled="@{!actions.loading}"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Finance.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginTop="8dp"
                        app:textHelperError="@{actions.passwordError}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={actions.password}"
                            android:hint="@string/auth_type_password"
                            android:inputType="textPassword"
                            android:enabled="@{!actions.loading}"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_login_email"
                        style="@style/Widget.Finance.Auth.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/auth_start_continue"
                        android:onClick="@{() -> actions.onEmailLogin()}"
                        android:enabled="@{!actions.loading}"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/auth_alternative_text"
                        android:textAlignment="gravity" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_login_facebook"
                            style="@style/Widget.Finance.Auth.Button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/facebook"
                            android:textColor="@color/white"
                            android:onClick="@{() -> actions.onFacebookLogin()}"
                            android:enabled="@{!actions.loading}"
                            app:backgroundTint="@color/com_facebook_button_background_color"
                            app:icon="@drawable/com_facebook_button_icon"
                            app:iconGravity="textStart"
                            app:iconTint="@color/white"
                            app:layout_constraintEnd_toStartOf="@+id/btn_login_google"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_login_google"
                            style="@style/Widget.Finance.Auth.Button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="24dp"
                            android:text="@string/google"
                            android:onClick="@{() -> actions.onGoogleLogin()}"
                            android:enabled="@{!actions.loading}"
                            app:backgroundTint="?attr/colorOnSurface"
                            app:icon="@drawable/googleg_standard_color_18"
                            app:iconGravity="textStart"
                            app:iconTint="@color/white"
                            app:iconTintMode="multiply"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/btn_login_facebook"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/browser_actions_divider_color"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> actions.onCreateAccount()}"
                        android:enabled="@{!actions.loading}"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_marginHorizontal="24dp"
                        android:letterSpacing="0.001"
                        android:text="@string/auth_register"
                        android:textAllCaps="false" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_login_guest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> actions.onGuestLogin()}"
                        android:enabled="@{!actions.loading}"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_marginHorizontal="24dp"
                        android:letterSpacing="0.001"
                        android:text="@string/auth_enter_as_guest"
                        android:textAllCaps="false" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>