<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <merge
        tools:parentTag="com.google.android.material.card.MaterialCardView"
        tools:cardBackgroundColor="?attr/colorPrimary">
        <View
            android:layout_width="36dp"
            android:layout_height="96dp"
            android:background="?attr/colorPrimaryLight"
            android:alpha="0.2"
            android:rotation="45"
            android:layout_marginTop="-27dp"
            android:layout_marginStart="3dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="26dp"
                android:paddingHorizontal="16dp"
                android:text="@string/balance"
                android:textSize="16sp"
                android:textColor="?attr/colorLightOnPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/value_balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:textSize="22sp"
                android:textColor="?attr/colorOnPrimary"
                android:textStyle="bold"
                android:letterSpacing="0.04"
                app:layout_constraintTop_toBottomOf="@id/label_balance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="$198.556,85"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_income"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:background="?attr/colorIncome"
                app:layout_constraintBottom_toBottomOf="@+id/label_income"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/value_income"
                app:srcCompat="@drawable/ic_baseline_add_24"
                app:tint="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/value_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="8dp"
                android:minWidth="64dp"
                android:textColor="?attr/colorOnPrimary"
                tools:text="9.875,57"
                android:textSize="18sp"
                android:textStyle="bold"
                android:letterSpacing="0.04"
                app:layout_constraintTop_toBottomOf="@id/value_balance"
                app:layout_constraintStart_toEndOf="@id/icon_income"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/income"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_income"
                app:layout_constraintTop_toBottomOf="@id/value_income" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="label_income,icon_income,value_income"/>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_payment"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:background="?attr/colorPayment"
                app:layout_constraintBottom_toBottomOf="@+id/label_payment"
                app:layout_constraintStart_toStartOf="@id/barrier_income"
                app:layout_constraintTop_toTopOf="@+id/value_income"
                app:srcCompat="@drawable/ic_baseline_remove_24"
                app:tint="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/value_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="8dp"
                android:minWidth="64dp"
                android:textColor="?attr/colorOnPrimary"
                tools:text="1.237,62"
                android:textSize="18sp"
                android:textStyle="bold"
                android:letterSpacing="0.04"
                app:layout_constraintTop_toBottomOf="@id/value_balance"
                app:layout_constraintStart_toEndOf="@id/icon_payment"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/payments"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_payment"
                app:layout_constraintTop_toBottomOf="@id/value_payment" />

            <View
                android:id="@+id/bar_3"
                android:layout_width="24dp"
                android:layout_height="30dp"
                android:alpha="0.2"
                android:layout_marginEnd="16dp"
                android:background="?attr/colorPrimaryLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/bar_2"
                android:layout_width="24dp"
                android:layout_height="70dp"
                android:alpha="0.2"
                android:layout_marginEnd="6dp"
                android:background="?attr/colorPrimaryLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/bar_3" />

            <View
                android:id="@+id/bar_1"
                android:layout_width="24dp"
                android:layout_height="48dp"
                android:alpha="0.2"
                android:layout_marginEnd="6dp"
                android:background="?attr/colorPrimaryLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/bar_2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </merge>
</layout>